<resources>
    <string name="app_name">Nuriss Life Care</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Log Out</string>
    <string name="action_settings1">Website</string>
    <string name="action_search">Search</string>
    <string name="menu_refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Display Heading of selected item -->
    <string name="screen_home">Home</string>
    <string name="screen_aboutus">About Us</string>
    <string name="screen_products">Products</string>
    <string name="screen_career">Carrer</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="aboutus_small">&quot;Creating superior and cost affective product of international standard is what we aim for.&quot; </string>
    <string name="aboutus_large">WE PROVIDE HEALTH OF INTERNATIONAL STANDARD (WHO PARAMETER) OF BEST QUALITY HEALTH PRODUCT</string>

    <!-- Google Api-->
    <string name="google_api_keys">AIzaSyCjGp_5T2u0HC-mXAtgSz974XcLcdILQcw</string>

    <!--Home-->
    <string name="login_me">Already Registered! Login Me</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_forgot_password">Forgot your password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_right"><![CDATA[>> ]]></string>
    <string name="btn_left"><![CDATA[<< ]]></string>

    <string name="help_about">NURISS Lifecare Pvt. Ltd. is a privately held Indian Pharmaceutical manufacturing company involved in manufacture and supply of wide range of avant-garde pharmaceuticals to semi-regulated and non regulated markets across the globe. Our commitment to provide world class quality, competitive pricing and a constant urge to explore new therapeutic segments and expand our product portfolio has gained us a reputation as a global manufacturer of medicines with world class quality products.</string>
    <string name="help_about1">We are truly committed towards manufacture and supply of finest quality medication used for the treatment of various life threatening diseases and conditions. NURISS Lifecare Pvt. Ltd. has a robust product portfolio spread over major therapeutic areas particularly Cardiovascular Drugs, Anticancer Drugs, Anti-Retroviral, Antibiotics, Anti Tubercular Medication, Analgesics and Antipyretics and others.</string>
    <string name="faq_1">Urnifer is a very good source of iron which improves haemoglobin and cures anaemia in women ,children and old age people. </string>
    <string name="faq_2">Caluris is a very good source of calcium and its absorption is very fast . It also helps in growth of bone in children and growing population and it protects bone of Women and old age people. </string>
    <string name="faq_3">It is good source of protein. It helps in growth and improvement in children ,women ,old age, working class, students and sick people. </string>
    <string name="faq">Below are some question that are frequently asked by customer</string>
    <string name="contct">Address:&#160;&#160;RZ-440/318,Road No-7,Geetanjali &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Park,West Sagarpur, New Delhi-110046</string>
    <string name="contct1">Phone:&#160;&#160;&#160;&#160;+91 9557627315 &#160;&#160;&#160;&#160;Call</string>
    <string name="contct2">Email:&#160;&#160;&#160;&#160;&#160;&#160;nurisslife4all@gmail.com </string>
    <string name="contct3">NURISS Lifecare Pvt. Ltd. is a privately held Indian Pharmaceutical manufacturing company involved in manufacture and supply of wide range of avant-garde pharmaceuticals to semi-regulated and non regulated markets across the globe.
\r\n\r\nOur commitment to provide world class quality, competitive pricing and a constant urge to explore new therapeutic segments and expand our product portfolio has gained us a reputation as a global manufacturer of medicines with world class quality products.
</string>
    <string name="contct4">Feel free to contact us for an query!</string>
    <string name="contact5">Website and App powered by</string>
    <string name="contact6">PRIOR Solution, Shiwanshu and Abhishek</string>


    <!--home fragment-->
    <string name="base_vision">Where you see in future</string>
    <string name="vision">The company is driven by its vision to achieve significant business growth in prescription products and generics. </string>
    <string name="base_whyus">Why choose our products</string>
    <string name="whyus">Owing to their standard formulation, FDA approval, effective results and high purity. </string>
    <string name="base_mission">What we want to serve.</string>
    <string name="mission">Our mission is to improve the quality of life by enabling people to do more, feel better and live longer. </string>
    <string name="base_team">Our staff &amp; team power</string>
    <string name="team">The dedication and sincere efforts of our team members have enabled us in gaining unimagined heights of success. </string>
    <string name="nuriss_title">NURISS Lifecare Pvt. Ltd.</string>
    <string name="article">A new study published in the journal Science finds that the human sense of smell can detect more than 1 trillion odors, far exceeding the number previous studies have indicated. </string>
    <string name="article_base">LATEST ARTICLE</string>
    <string name="article1_base">Vitamin D supplements: to take or not to take? | Click here </string>
    <string name="article1">As well as hailing vitamin D supplements for their potential to reduce depression, past research has suggested they can improve breast cancer survival rates, as well as reduce the risk of heart attack. </string>
    <string name="article2_base">Non-drinkers versus occasional drinkers | Click here </string>
    <string name="article2">The study classes occasional drinkers as people "who had consumed alcohol in the past year but reported zero servings in an average week." People who had not consumed alcohol in the past year were categorized as non-drinkers. </string>
    <string name="article3_base">Sense of smell is more complicated to study | Click here</string>
    <string name="article3">For the study, Dr. Keller and colleagues invited volunteers to sniff vials of odors that held different mixes of 128 odor molecules responsible for scents ranging from spearmint to orange to anise. </string>

    <!--Banner ad unit id -->
    <string name="test_banner_ad_unit_id" translatable="false">ca-app-pub-9821126293905059/7844180728</string>

    <!--Tour program -->
    <string name="tour_title">Fill the required details</string>
    <string name="tour_name">Name*</string>
    <string name="tour_doctors__visited">How many doctors you visited(must select)</string>
    <string name="tour_date_visit">Enter the date of visit</string>
    <string name="tour_dr_name">Mention doctors name</string>
    <string name="tour_area">Mention visiting area</string>
    <string name="tour_time">Enter the time of visit</string>
    <string name="tour_medical_shop">Enter the name of Medical Shop Visited*</string>

    <string name="wel">Welcome To Nuriss Talk</string>
    <string name="tour_base">Tour Program</string>
    <string name="chat_nur">Nuriss Talk Chat</string>

</resources>
