<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="60"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"/>

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="70"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings1"
        app:showAsAction="never"  />

</menu>