<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/rnxf"
    tools:context="com.demo.stuartabhi.nurisslife.Fragment.ContactUs">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:text="WHERE DO YOU FIND US?"
            android:layout_gravity="center|top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/lbl_name"
            android:text="@string/contct"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/phone1"
            android:background="@color/lbl_name"
            android:text="@string/contct1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:background="@color/lbl_name"
            android:text="@string/contct2"/>
        
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/contct3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:text="GET IN TOUCH NOW"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/contct4"/>

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="Name"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/lbl_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/contact_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="Email(will not be published)"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/lbl_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/msg_leave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:hint="Leave your message"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/lbl_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="24dp"
            android:background="@mipmap/send1"
            android:layout_marginBottom="24dp"
            android:padding="15dp" />


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/contact5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/lbl_name"
            android:text="@string/contact6"/>
        />
    </LinearLayout>
</ScrollView>
