<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/home_talk"
    android:background="@mipmap/home1"
    android:layout_height="match_parent"
    tools:context="com.demo.stuartabhi.nurisslife.Login.MainHome">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/wel"
            android:layout_marginBottom="13dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/cardview">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="16dp"
                    android:background="@mipmap/bttn"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_photo"
                        android:src="@mipmap/nurisstalk"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="16dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_name"
                        android:text="@string/tour_base"
                        android:textColor="#ffffff"
                        android:layout_toRightOf="@+id/person_photo"
                        android:layout_alignParentTop="true"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_age"
                        android:textColor="#ffffff"
                        android:text="Submit Report"
                        android:layout_toRightOf="@+id/person_photo"
                        android:layout_below="@+id/person_name"
                        />

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardview1"

                android:layout_marginBottom="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@mipmap/bttn"
                    android:layout_height="150dp"
                    android:padding="16dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_photo1"
                        android:src="@mipmap/nuriss_talk1"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="16dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_name1"
                        android:text="@string/chat_nur"
                        android:textColor="#ffffff"
                        android:layout_toRightOf="@+id/person_photo1"
                        android:layout_alignParentTop="true"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_age1"
                        android:text="Chat Here"
                        android:textColor="#ffffff"
                        android:layout_toRightOf="@+id/person_photo1"
                        android:layout_below="@+id/person_name1"
                        />

                </RelativeLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>


        <Button
            android:id="@+id/btnLogout"
            android:layout_gravity="bottom|center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/colorPrimary"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>
